--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dateformat": "^4.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
     "reactstrap": "^9.2.3"
   },
   "devDependencies": {
