--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
-    "reactstrap": "^9.2.3"
+    "reactstrap": "^9.2.3",
+    "redux": "4.2.1",
+    "react-redux": "8.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
