--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dateformat": "^4.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "8.0.5",
     "react-router-dom": "^7.0.1",
     "reactstrap": "^9.2.3",
     "redux": "4.2.1",
-    "react-redux": "8.0.5"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
